# openjpeg-x-opencv

./: CMakeLists.txt  LICENSE  README.md  main.cpp
